# project2_Ageeva_Alina_M25-555

./: Makefile  pyproject.toml
src/primitive_db/: constants.py  core.py  db_meta.json  engine.py  main.py  utils.py
