[tool.poetry]
name = "project2-Ageeva-M25-555"
version = "0.1.0"
description = ""
authors = ["ageeva139 <ageevaa2002@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
project = "src.primitive_db.main:main"